syntax="proto3";

option go_package = "./proto";

package user_registry_service;

service CredentialDistroService {
    rpc SaltStream(stream SaltRequest) returns (stream Response);
    rpc NewCredsStream(stream NewCredsRequest) returns (stream Response);
}

message SubscribeToSaltDistro {
    string topic = 1;
    string id = 2;
}

message SubscribeToConnectionCredRotator {
    string topic = 1;
    string id = 2;
    string public_key = 3;
}

message AckSalt {
    string topic = 1;
    string id = 2;
}

message AckNewCreds {
    string topic = 1;
    string id = 2;
}

message AckConfirm {
    string id = 1;
    string topic = 2;
    string public_key = 3;
}

message NackSalt {
    string topic = 1;
    string id = 2;
    string msg = 3;
}

message NackNewCreds {
    string topic = 1;
    string id = 2;
    string msg = 3;
}

message CredentialResponse {
    string id = 1;
    string topic = 2;
    string payload = 3;
}

message InitialResponse {
    string id = 1;
    string topic = 2;
    string payload = 3;
}

message ConfirmResponse {
    string id = 1;
    string topic = 2;
}

message SaltRequest {
    oneof value {
        SubscribeToSaltDistro sub_to_salt = 1;
        AckSalt ack_salt = 2;
        NackSalt nack_salt = 3;
    }
}

message NewCredsRequest {
    oneof value {
        SubscribeToConnectionCredRotator sub_to_cred_rotator = 1;
        AckNewCreds ack_new_creds = 2;
        NackNewCreds nack_new_creds = 3;
        AckConfirm ack_confirm = 4;
    }
}

message Response {
    oneof value {
        CredentialResponse response = 1;
        ConfirmResponse confirm = 2;
        InitialResponse initial_response = 3;
    }
}